# evpi_description

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/evpi_bringup/lib/evpi_bringup/: can_manager  talker
install/evpi_bringup/share/evpi_bringup/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/evpi_description/lib/evpi_description/: evpi_joint_state_publisher
install/evpi_description/share/evpi_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/evpi_drive/lib/evpi_drive/: motor_controll  twist_2_ackermann
install/evpi_drive/share/evpi_drive/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/evpi_interfaces/share/evpi_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/evpi_navigation/lib/evpi_navigation/: odometry
install/evpi_navigation/share/evpi_navigation/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/evpi_uwb/lib/evpi_uwb/: following_node  hybrid_cosine  trilateration_mse  (+1 more)
install/evpi_uwb/share/evpi_uwb/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/evpi_uwb/share/evpi_uwb/config/: uwb.yaml
install/evpi_uwb/share/evpi_uwb/include/evpi_uwb/: following_node.hpp
install/evpi_uwb/share/evpi_uwb/launch/: trilateration_mse.launch.py  uwb_hybrid.launch.py  uwb_transceiver.launch.py
log/: latest_build
(+51 files in other folders)
