<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>evpi_uwb</name>
  <version>0.0.0</version>
  <description>
    The evpi_uwb package provides launch scripts frimwares for starting ultra-wide-band
  </description>   <maintainer email="vincy@mit.edu">vincy xiao</maintainer>
  <license>WTFPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>  
  <depend>geometry_msgs</depend>  
  <depend>evpi_interfaces</depend>  
  <depend>ackermann_msgs</depend>  
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
